# aws-reserved-capacity-actor

./: .gitignore  Makefile  README.md  lint.py  mypy.ini  pyproject.toml  requirements.in  requirements.txt  setup.cfg
.actor/: actor.json  input_schema.json
.github/workflows/: lint.yaml
aws_reserved_capacity/: aws.py  main.py
src/: aws.py  main.py  main_test.py  notifications.py
